# task-manager

./: .gitignore  README.md  memo.md  package.json  pyproject.toml
html_test/: main.html
task_manager/dashboard/: models.py  urls.py  views.py
task_manager/dashboard/migrations/: 0001_initial.py
task_manager/dashboard/static/dashboard/: style.css
task_manager/dashboard/templates/dashboard/: index.html
task_manager/dashboard/templates/form/: index.html  schedule.html
task_manager/dashboard/templates/testpage/: TestPage.html
task_manager/task_manager/: settings.py  urls.py
