[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["pisce"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
uwsgi = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
